...
    <string name="settings_unavailable">Settings unavailable</string>
    <string name="timeshift_seek_waiting">Seek requested. Waiting for playback position</string>
    <string name="connection_refreshing_channels">Refreshing channel information…</string>
    <string name="settings_storage">Storage</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_clearing">Clearing cache…</string>
    <string name="app_name" translatable="false">Tvheadend Player</string>

    <string name="channel_list">Channel List</string>
    <string name="all_channels">All channels</string>
    <string name="choose_channel_tag">Choose a channel tag</string>
    <string name="previous_channel_tag">Previous channel tag</string>
    <string name="next_channel_tag">Next channel tag</string>
...
